--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -23,27 +23,27 @@ jobs:
           node-version: 20
           registry-url: 'https://registry.npmjs.org'
 
-      # Ensure npm 11.5.1 or later is installed
-      - name: Update npm
-        run: npm install -g npm@latest
+      - name: Install pnpm
+        run: npm install -g pnpm
 
       - name: Clean install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
       - name: Increment patch version
-        run: |
-          npm version patch -m "ci: bump version to %s [skip ci]"
+        run: pnpm version patch --no-git-tag-version
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Publish to npm
-        run: npm publish
+        run: pnpm publish
 
       # Ensure we push the version change only after a successful publish
       - name: Push version changes
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add package.json
+          git commit -m "ci: bump version to $(node -p "require('./package.json').version") [skip ci]"
           git push origin HEAD:main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
